# faiss-serving

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: publish-docker-latest.yml  publish-docker.yml  run-test.yml  test-docker.yml
scripts/: create_test_faiss_embedding.py
src/: main.cc  server-test.cc  server.hh  utils-test.cc  utils.hh
